# osc-data-extractor

./: .buildinfo  .gitignore  .gitmodules  .pdm-python  .pre-commit-config.yaml  README.md  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  tox.ini
.github/: README.md
.github/.github/workflows/: bootstrap.yaml
.github/scripts/: repositories.txt  update-downstreams.sh
.github/workflows/: bootstrap.yaml  codeql.yml  dependencies.yaml  gha-bootstrap.yaml
_modules/: index.html
_modules/osc_data_extractor/: skeleton.html
_sources/api/: modules.rst.txt  osc_data_extractor.rst.txt
api/: modules.html  osc_data_extractor.html
docs/: conf.py
src/osc_data_extractor/: __init__.py  skeleton.py
tests/: test_skeleton.py
