[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "osc-data-extractor"
version = "0.1.0"
description = "OS-Climate Data Extraction Tool"
authors = [
    {name = "David Besslich",email = "72577720+MichaelTiemannOSC@users.noreply.github.com"},
    {name = "David Besslich",email = "mwatkins@linuxfoundation.org"},
]
dev-dependencies = [
    "pdm",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Apache-2.0"}
