[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "osc-data-extractor"
version = "0.1.0"
description = "OS-Climate Data Extraction Tool"
authors = [
    {name = "David Besslich",email = "72577720+MichaelTiemannOSC@users.noreply.github.com"},
    {name = "David Besslich",email = "mwatkins@linuxfoundation.org"},
]
dev-dependencies = [
    "pdm",
]
additional_dependencies = [
    "pytest",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Apache-2.0"}

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
docs = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = ["pdm[pytest]", "pytest", pytest-cov"]
tox = ["tox", "tox-pdm>=0.5"]
docs = ["sphinx>=7.2.6", "sphinx-copybutton>=0.5.2"]
dev = ["tox>=4.11.3", "tox-pdm>=0.7.0"]
lint = ["pre-commit", "pyproject-flake8"]

[tool.pytest.ini_options]
testpaths = ["test/"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "120"
extend-ignore = [
  "E501",
]
